<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/teacher_common_fragment_1"
            android:icon="@drawable/ic_content"
            android:title="@string/brief_history_of_gender_and_development_in_the_philippines" />
        <item
            android:id="@+id/teacher_common_fragment_2"
            android:icon="@drawable/ic_content"
            android:title="@string/history_of_gender_and_development_resource_center" />
        <item
            android:id="@+id/teacher_common_fragment_3"
            android:icon="@drawable/ic_content"
            android:title="@string/history_of_gender_and_development_in_cvsu_ccc" />
        <item
            android:id="@+id/teacher_fragment_1"
            android:icon="@drawable/ic_content"
            android:title="@string/gender_sensitivity_training_module" />
        <item
            android:id="@+id/teacher_fragment_2"
            android:icon="@drawable/ic_content"
            android:title="@string/various_forms_of_violence" />
        <item
            android:id="@+id/teacher_fragment_3"
            android:icon="@drawable/ic_content"
            android:title="@string/legal_mandates_of_gad" />
        <item
            android:id="@+id/teacher_fragment_4"
            android:icon="@drawable/ic_content"
            android:title="@string/gender_mainstreaming" />
        <item
            android:id="@+id/teacher_fragment_5"
            android:icon="@drawable/ic_content"
            android:title="@string/gender_analysis" />
        <item
            android:id="@+id/teacher_fragment_6"
            android:icon="@drawable/ic_content"
            android:title="@string/gender_analysis_tools" />
        <item
            android:id="@+id/teacher_fragment_7"
            android:icon="@drawable/ic_content"
            android:title="@string/gender_mainstreaming_evaluation_framework" />
        <item
            android:id="@+id/teacher_fragment_8"
            android:icon="@drawable/ic_content"
            android:title="@string/gad_planning_and_budgeting" />
    </group>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/teacher_localhelpdesk"
                android:icon="@drawable/ic_helpdesk"
                android:title="@string/local_help_desk_information" />
        </menu>
    </item>
</menu>