<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/student_common_fragment_1"
        android:icon="@drawable/ic_content"
        android:title="@string/brief_history_of_gender_and_development_in_the_philippines" />
    <item
        android:id="@+id/student_common_fragment_2"
        android:icon="@drawable/ic_content"
        android:title="@string/history_of_gender_and_development_resource_center" />
    <item
        android:id="@+id/student_common_fragment_3"
        android:icon="@drawable/ic_content"
        android:title="@string/history_of_gender_and_development_in_cvsu_ccc" />
    <item
        android:id="@+id/student_fragment_1"
        android:icon="@drawable/ic_content"
        android:title="@string/gender_sensitivity_training_module" />
    <item
        android:id="@+id/student_fragment_2"
        android:icon="@drawable/ic_content"
        android:title="@string/various_forms_of_violence" />
    <item
        android:id="@+id/student_fragment_3"
        android:icon="@drawable/ic_content"
        android:title="@string/legal_mandates_of_gad" />
</menu>